public/css/layout.css
:root {
	--border-radius: 0.3rem;
	--gap: 1rem;
	--padding: 1rem;
}

nav {
	display: flex;
	background: var(--accents-1);
	padding-left: var(--gap);
	padding-right: var(--gap);
}

nav > ul {
	width: 100%;
	display: flex;
	margin-left: calc(var(--gap) * 2);
	gap: calc(var(--gap) * 2);
	list-style-type: none;
	padding: 0;
}

nav > ul:nth-of-type(2) {
	justify-content: end;
}

nav > ul > li {
	display: flex;
	align-items: center;
}

nav > ul > li > a {
	text-decoration: none;
	font-size: large;
	font-weight: 500;
}

nav > ul > li > a:hover {
	color: var(--green);
}

nav > form {
	display: flex;
	align-items: center;
}

ul.clips {
	display: flex;
	flex-wrap: wrap;
	gap: var(--gap);
	list-style-type: none;
	padding: 0;
}

ul.clips > li > div {
	position: relative;
	width: 400px;
	cursor: pointer;
}

ul.clips > li > div > span {
	position: absolute;
	background: color-mix(in srgb, var(--background), transparent 30%);
	padding-left: var(--border-radius);
	padding-right: var(--border-radius);
}

ul.clips > li > div > span:nth-of-type(1) {
	top: var(--border-radius);
	left: var(--border-radius);
}

ul.clips > li > div > span:nth-of-type(2) {
	bottom: var(--border-radius);
	left: var(--border-radius);
}

ul.clips > li > div > span:nth-of-type(3) {
	bottom: var(--border-radius);
	right: var(--border-radius);
}

ul.clips > li > p {
	margin: 0;
}

ul.clips > li > video {
	background: var(--background);
	cursor: pointer;
	border-radius: var(--border-radius);
	margin-bottom: 0.3rem;
}

video[controls] {
	max-height: 80vh;
	margin: auto;
}

main {
	padding-left: var(--gap);
	padding-right: var(--gap);
}

h1 {
	margin-bottom: 0;
	padding: 0;
}

p[placeholder]:empty::before {
	content: attr(placeholder);
	color: var(--accents-4);
	cursor: text;
}

p[placeholder]:empty:focus::before {
	content: "";
}

#drag {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 1000px;
	height: 500px;
	border: 3px dashed white;
	cursor: pointer;
}

@media screen and (max-width: 900px) {
	nav {
		flex-direction: row;
		flex-wrap: wrap;
	}

	nav > h2 {
		margin-left: auto;
		margin-right: auto;
	}

	nav > form {
		width: 100%;
	}

	nav > form > input {
		width: 100%;
	}

	nav > ul,
	nav > ul:nth-of-type(2) {
		justify-content: center;
		margin-left: 0;
	}

	ul.clips {
		justify-content: center;
	}
}

